# tsuki

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Procfile  README.md  _token.py  example.env  pyproject.toml  requirements.txt  table tag.txt
.github/: pull_request_template.md
.github/workflows/: codeql.yml  greetings.yml  heroku.yml  stale.yml
tsuki/: config.py  database.py  main.py  models.py  oauth.py
tsuki/resources/: init.sql
tsuki/routers/: auth.py  database.py  explore.py  feed.py  models.py  post.py  search.py  user.py
tsuki/static/: main.js  styles.css
tsuki/templates/: auth.html  base.html  delete.html  error.html  explore.html  feed.html  get_post.html  index.html  make_post.html  response.html  search.html  update.html  user.html  verification.html  verify.html
